# knowpile

./: .gitignore  README.md  normalize.sh  pyproject.toml
knowpiler/src/knowpiler/cli/: __init__.py  commands.py
knowpiler/src/knowpiler/core/: config.py  convert.py  ignore.py  llm.py  manifest.py  utils.py
src/knowpile/cli/: __init__.py
src/knowpile/core/: convert.py  llm.py  treewalk.py  utils.py
src/knowpiler/cli/: commands.py
src/knowpiler/core/: config.py  doctor.py  ignore.py  manifest.py  treewalk.py  utils.py
