[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowpiler"
version = "0.1.0"
description = "Knowledge compiler: scattered project evidence -> canonical Layer-2 knowledge files for LLM-driven career artifacts."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "InquirerPy>=0.3.4",
    "pydantic>=2.6",
    "markitdown[pdf,docx,pptx]>=0.1.0",
    "pathspec>=0.12",
    "litellm>=1.40",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# pdf/docx/pptx cover every format the manifest schema actually collects
# (reports+research: pdf/docx; presentations: pdf/pptx). xlsx is not needed
# by any current evidence category -- added here only if that changes.
# Deliberately never [all]: that extra pulls ffmpeg/pydub/SpeechRecognition,
# the documented root cause of the Rosetta/ARM64 crash class from Level 0.
xlsx = ["markitdown[xlsx]>=0.1.0"]

[project.scripts]
knowpiler = "knowpiler.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/knowpiler"]
